dark mode fix

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+    margin: 0;
+    padding: 0;
     background: #ffc0cb;
     display: flex;
     flex-direction: column;
